Deprecate JRubySTAXReader, update README and Changes